--- a/Resume/style.css
+++ b/Resume/style.css
@@ -1,10 +1,13 @@
-p {
-
-    font-size: 24px;
-    color:purple
+body {
+  font-family: 'Open Sans', arial, sans-serif;
+  font-size: 1em
+  color; #444;
+  font-weight: 400;
 }
 
 h1 {
-    font-size: 48px;
-    color: red;
+    font-size: 3em;
+    text-transform: uppercase
+    text-align; center;
+    color: #33485e;
 }
