--- a/Resume/style.css
+++ b/Resume/style.css
@@ -1,3 +1,5 @@
+/*Main Style*/
+
 body {
   font-family: 'Open Sans', arial, sans-serif;
   font-size: 1em
@@ -10,4 +12,18 @@ h1 {
     text-transform: uppercase
     text-align; center;
     color: #33485e;
+}
+
+strong {
+    color:#33485e
+    text-transform: uppercase;
+    font-size: size 1.5em;
+
+}
+
+h2 {
+    font-size: 1.5em;
+    text-transform: uppercase;
+    background-color: #33485e;
+    color:#fff
 }
