--- a/LeeLayouts/stylesheet.css
+++ b/LeeLayouts/stylesheet.css
@@ -5,10 +5,23 @@
 
 h1 {
     font-family: Helvetica, sans-serif;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
     margin-bottom: 10px;
     margin-right: 200px;
+}
+
+h2 {
+    font-family: Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+#main-image {
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
 }
 
 #byline {
@@ -28,9 +41,15 @@ p {
     line-height: 1.5;
 }
 
-h3 {
+#read-more {
     font-family: Helvetica, sans-serif;
+    font-style: bold;
     font-size: 14px;
-    font-weight: bold;
     margin-top: 20px;
+}
+
+.related-links {
+    font-family: Helvetica, sans-serif;
+    list-style-type: none;
+    font-size: 14px;
 }
