--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -1,16 +1,26 @@
 /*Stylesheet for Midterm*/
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
+container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 10px !important;
+    padding: 20px !important;
+}
+
 .banner {
-    margin: 0 auto;
+    margin: 0;
     height: auto;
     width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1000;
+   
 }
 
 .banner-image {
-    width: 60%;
+    width: 100%;
     height: auto;
     display: block;
 }
