--- a/Final/stylesheet.css
+++ b/Final/stylesheet.css
@@ -1,3 +1,4 @@
+
 /* Top hat */
 .nav-logo {
     color: #fff;
@@ -6,7 +7,7 @@
     text-transform: uppercase;
 }
 
-/* Highlist color */
+/* Highlight color */
 .orange {
     color: #ff6600;
 }
