--- a/Final/stylesheet.css
+++ b/Final/stylesheet.css
@@ -1,7 +1,16 @@
 
+body {
+    width: 100%;
+    margin: 0 auto;
+}
+
+p {
+    margin-bottom: 1em;
+}
+
 /* Top hat */
 .nav-logo {
-    color: #fff;
+    color: #000000;
     margin:0 auto;
     font-weight: 700;
     text-transform: uppercase;
@@ -32,42 +41,76 @@
     margin-bottom: 20px;
 }
 
+/* Grid */
+.list {
+    text-align: justify;
+  text-justify: inter-word;
+}
+
 /* Splash */
 
 .hero-container {
     position: relative;
-    text-align: center;
+    text-align: left;
     color: white;
+    width: 100%;
 
 }
 
 .hero-image {
+    height: 100vh; 
+    position: relative;
     width: 100%;
 }
 
-.overlay {
+.hero-gif {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.hero-text {
     position: absolute;
     width: 100%;
-    top: 20%;
-    background-color: #000;
-    opacity: 0.5;
+    padding: 20px;
+    top: 88%;
+    text-align: center;
+    color: #fff;
+    font-size: 12px;
+    z-index: 2;
 }
 
 .hero-head{
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translateX(-50%);
+    position: static;
     color: #fff;
-    font-size: 2.5em;
+    top: 50%;
+    padding: 100px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 3.5em;
     font-weight: bold;
+    margin-bottom: 10px;
+    
+}
+
+.overlay {
+    position: static;
+    width: 100%;
+    height: 100%;
+    top: 15%;
+    background-color: #000;
+    opacity: 0.7;
+    z-index: 0;
+
 }
 
 .hero-sub {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translateX(-50%);
+    position: static;
+    transform: none;
     color: #fff;
     font-size: 1.5em;
 }
@@ -79,5 +122,16 @@
         padding-right: 10px;
     }
 
+     .hero-head {
+        font-size: 1.8em;
+    }
+
+    .hero-sub {
+        font-size: 1.2em;
+    }
+
+    .hero-text {
+        width: 90%;
+    }
 
 }
