--- a/Final/stylesheet.css
+++ b/Final/stylesheet.css
@@ -1,57 +1,6 @@
-
-body {
-    width: 100%;
-    margin: 0 auto;
-}
-
-
-/* Top hat */
-.nav-logo {
-    color: #000000;
-    margin:0 auto;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-/* Pull quote */
-
-.quote {
-    font-family: 'Oswald', sans-serif;
-    color:#000000;
-    text-align: left;
-    font-size: 30px;
-    font-weight: 500;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    width: 100%;
-}
-
-/* Highlight color */
-.highlight {
-    color: #D25A3F;
-    font-size: 60px;
-    font-weight: 700;
-    font-style: italic;
-    margin-left: 10%;
-}
-
-
-.quote-attribution {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.2em;
-    font-weight: 300;
-    margin-top: 10px;
-    margin-bottom: 20px;
-}
-
-/* Grid */
-.list {
-    text-align: justify;
-  text-justify: inter-word;
-}
+/* Stylesheet for Liberty Lee JOUR352 Final Project */
 
 /* Splash */
-
 .hero-container {
     position: relative;
     text-align: left;
@@ -94,8 +43,9 @@ body {
     padding: 100px;
     margin-left: 20px;
     margin-right: 20px;
-    font-size: 3.5em;
-    font-weight: bold;
+    font-family: 'Spectral', serif;
+    font-size: 4em;
+    font-weight: 600;
     margin-bottom: 10px;
     
 }
@@ -117,6 +67,79 @@ body {
     color: #fff;
     font-size: 1.5em;
 }
+
+/* Top hat */
+.nav-logo {
+    color: #000000;
+    margin:0 auto;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+/* Body contnent */
+body {
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+    margin-top: 20px;
+    margin-bottom: 50px;
+
+}
+
+.chapter-headline {
+    font-family: 'Spectral', serif;
+    font-size: 1.5em;
+    font-weight: 600;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+/* Pull quote */
+.quote {
+    font-family: 'Oswald', sans-serif;
+    color:#000000;
+    text-align: left;
+    font-size: 30px;
+    font-weight: 500;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    width: 100%;
+}
+
+.quote-attribution {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2em;
+    font-weight: 300;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+/* Highlight color */
+.highlight {
+    color: #D25A3F;
+    font-size: 60px;
+    font-weight: 700;
+    font-style: italic;
+    margin-left: 10%;
+}
+
+
+/* Grid */
+.container-overflow-hidden-text-center {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.list {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
 
 /* Media Queries */
 
@@ -150,6 +173,8 @@ body {
 
     .hero-head {
         font-size: 2.5em;
+        margin-left: 10px;
+        margin-right: 10px;
     }
 
     .hero-sub {
