--- a/Final/stylesheet.css
+++ b/Final/stylesheet.css
@@ -6,7 +6,7 @@
     text-align: left;
     color: white;
     width: 100%;
-
+    margin-bottom: 40px;
 }
 
 .hero-image {
@@ -29,7 +29,7 @@
     position: absolute;
     width: 100%;
     padding: 20px;
-    top: 88%;
+    top: 75%;
     text-align: center;
     color: #fff;
     font-size: 12px;
@@ -39,7 +39,6 @@
 .hero-head{
     position: static;
     color: #fff;
-    top: 50%;
     padding: 100px;
     margin-left: 20px;
     margin-right: 20px;
@@ -65,7 +64,13 @@
     position: static;
     transform: none;
     color: #fff;
-    font-size: 1.5em;
+    font-family: "Spectral", serif;
+    font-weight: 300;
+    font-size: 2em;
+    text-align: right;
+    margin-left: 55%;
+    margin-right: 1%;
+    
 }
 
 /* Top hat */
@@ -80,7 +85,15 @@
 body {
     width: 100%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 0;
+}
+
+.container {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0 auto;
+    max-width: 1200px;
+
 }
 
 .img-fluid {
@@ -166,7 +179,7 @@ body {
     .hero-text {
         width: 90%;
         padding: 10px;
-        top: 80%;
+        top: 65%;
     }
 }
     /* Styles for small-sized screens or tablets */
@@ -193,7 +206,7 @@ body {
     .hero-text {
         width: 90%;
         padding: 15px;
-        top: 80%;
+        top: 70%;
     }
 }
 
@@ -201,6 +214,8 @@ body {
     @media (min-width: 992px) and (max-width: 119.9px) {
     .container {
         width: 970px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 
@@ -208,5 +223,7 @@ body {
     @media (min-width: 1220px) {
     .container {
         width: 1170px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
