--- a/Final/stylesheet.css
+++ b/Final/stylesheet.css
@@ -170,8 +170,8 @@ body {
 
      .hero-head {
         font-size: 1.8em;
-        margin-left: 5px;
-        margin-right: 5px;
+        margin-left: 5%;
+        margin-right: 5%;
     }
 
     .hero-sub {
