--- a/Final/stylesheet.css
+++ b/Final/stylesheet.css
@@ -160,6 +160,8 @@ body {
 @media (max-width: 768.9px) {
     .container {
         width: 0 auto;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     p {
@@ -170,8 +172,9 @@ body {
 
      .hero-head {
         font-size: 1.8em;
-        margin-left: 5%;
-        margin-right: 5%;
+        padding: 0 10px;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .hero-sub {
@@ -188,6 +191,8 @@ body {
     @media (min-width: 768px) and (max-width: 991.9px) {
     .container {
         width: 750px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     
@@ -197,8 +202,9 @@ body {
 
     .hero-head {
         font-size: 2.5em;
-        margin-left: 10px;
-        margin-right: 10px;
+        padding: 0 20px;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .hero-sub {
@@ -215,7 +221,8 @@ body {
 /* Styles for medium-sized screens or desktops */
     @media (min-width: 992px) and (max-width: 119.9px) {
     .container {
-        width: 970px;
+        width: auto
+        max-width: 970px;
         padding-left: 20px;
         padding-right: 20px;
     }
@@ -224,7 +231,8 @@ body {
 /* Styles for large-sized screens or desktops */
     @media (min-width: 1220px) {
     .container {
-        width: 1170px;
+        width: auto
+        max-width: 1170px;
         padding-left: 20px;
         padding-right: 20px;
     }
